2011-07-13  Gabor Loki  <loki@webkit.org>

        [Qt] Flakey test: xmlhttprequest-50ms-download-dispatch.html on ARM
        https://bugs.webkit.org/show_bug.cgi?id=64452

        Rubber-stamped by Csaba Osztrogonác

        * platform/qt-arm/Skipped:

2011-07-13  John Knottenbelt  <jknotten@chromium.org>

        Reference Geolocation object from GeoNotifier and Geolocation::setIsAllowed.
        https://bugs.webkit.org/show_bug.cgi?id=64363

        Reviewed by Tony Gentilcore.

        * fast/dom/Geolocation/remove-remote-context-in-error-callback-crash.html: Added.
        * fast/dom/Geolocation/resources/remove-remote-context-in-error-callback-crash-inner.html: Added.
        * fast/dom/Geolocation/script-tests/remove-remote-context-in-error-callback-crash.js: Added.
        * fast/dom/Geolocation/remove-remote-context-in-error-callback-crash-expected.txt: Added.
        (gc):
        (onIframeReady):

2011-07-13  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening.

        * platform/qt-mac/Skipped: Skip failing tests.
        * platform/qt/Skipped: Skip svg/text/small-fonts-2.svg because of the 32/64 bit bug.

2011-07-13  Benjamin Poulain  <benjamin@webkit.org>

        [Qt] REGRESSION(r90634): It made http/tests/misc/script-async.html fail with Qt 4.8.x
        https://bugs.webkit.org/show_bug.cgi?id=64352

        Reviewed by Andreas Kling.

        Unskip http/tests/misc/script-async.html since the original change has been reverted.

        * platform/qt-4.8/Skipped:

2011-07-13  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        [Qt] Add expected results for the new passing tests and unskip them.

        Reviewed by Csaba Osztrogonác.

        * platform/qt/Skipped:
        * platform/qt/fast/[...]: Added.
        * platform/qt/svg/[...]: Added.

2011-07-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r90893 and r90894.
        http://trac.webkit.org/changeset/90893