@@ -1,3 +1,12 @@
+2011-07-12  Philippe Normand  <pnormand@igalia.com>
+
+        [GTK] media/media-blocked-by-willsendrequest.html fails
+        https://bugs.webkit.org/show_bug.cgi?id=63699
+
+        Reviewed by Martin Robinson.
+
+        * platform/gtk/Skipped: Unskip fixed test.
+
 2011-07-13  Gabor Loki  <loki@webkit.org>
 
         [Qt] Flakey test: xmlhttprequest-50ms-download-dispatch.html on ARM
